// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`auxiliary functions to reducer should show 0% score instead if the system score is 0 1`] = `
<ComplianceScore
  compliant={false}
  rulesFailed={300}
  rulesPassed={30}
  score={0}
  supported={true}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-2"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <Tooltip
        content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
      >
        <Popper
          appendTo={[Function]}
          distance={15}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          isVisible={false}
          onBlur={[Function]}
          onDocumentClick={false}
          onDocumentKeyDown={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onPopperMouseEnter={[Function]}
          onPopperMouseLeave={[Function]}
          onTriggerEnter={[Function]}
          placement="top"
          popper={
            <div
              aria-live="off"
              className="pf-c-tooltip"
              id="pf-tooltip-2"
              role="tooltip"
              style={
                Object {
                  "maxWidth": null,
                  "opacity": 0,
                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                }
              }
            >
              <TooltipArrow />
              <TooltipContent
                isLeftAligned={false}
              >
                The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
              </TooltipContent>
            </div>
          }
          popperMatchesTriggerWidth={false}
          positionModifiers={
            Object {
              "bottom": "pf-m-bottom",
              "bottom-end": "pf-m-bottom-right",
              "bottom-start": "pf-m-bottom-left",
              "left": "pf-m-left",
              "left-end": "pf-m-left-bottom",
              "left-start": "pf-m-left-top",
              "right": "pf-m-right",
              "right-end": "pf-m-right-bottom",
              "right-start": "pf-m-right-top",
              "top": "pf-m-top",
              "top-end": "pf-m-top-right",
              "top-start": "pf-m-top-left",
            }
          }
          removeFindDomNode={false}
          trigger={
            Array [
              <CompliantIcon
                compliant={false}
                rulesFailed={300}
                rulesPassed={30}
                score={0}
                supported={true}
              />,
              " 0%",
            ]
          }
          zIndex={9999}
        />
      </Tooltip>
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a danger icon if the host is not compliant 1`] = `
<ComplianceScore
  compliant={false}
  rulesFailed={300}
  rulesPassed={30}
  score={10}
  supported={true}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-1"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
      <Tooltip
        content="The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy."
      >
        <Popper
          appendTo={[Function]}
          distance={15}
          enableFlip={true}
          flipBehavior={
            Array [
              "top",
              "right",
              "bottom",
              "left",
              "top",
              "right",
              "bottom",
            ]
          }
          isVisible={false}
          onBlur={[Function]}
          onDocumentClick={false}
          onDocumentKeyDown={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onPopperMouseEnter={[Function]}
          onPopperMouseLeave={[Function]}
          onTriggerEnter={[Function]}
          placement="top"
          popper={
            <div
              aria-live="off"
              className="pf-c-tooltip"
              id="pf-tooltip-1"
              role="tooltip"
              style={
                Object {
                  "maxWidth": null,
                  "opacity": 0,
                  "transition": "opacity 300ms cubic-bezier(.54, 1.5, .38, 1.11)",
                }
              }
            >
              <TooltipArrow />
              <TooltipContent
                isLeftAligned={false}
              >
                The system compliance score is calculated by OpenSCAP and is a normalized weighted sum of rules selected for this policy.
              </TooltipContent>
            </div>
          }
          popperMatchesTriggerWidth={false}
          positionModifiers={
            Object {
              "bottom": "pf-m-bottom",
              "bottom-end": "pf-m-bottom-right",
              "bottom-start": "pf-m-bottom-left",
              "left": "pf-m-left",
              "left-end": "pf-m-left-bottom",
              "left-start": "pf-m-left-top",
              "right": "pf-m-right",
              "right-end": "pf-m-right-bottom",
              "right-start": "pf-m-right-top",
              "top": "pf-m-top",
              "top-end": "pf-m-top-right",
              "top-start": "pf-m-top-left",
            }
          }
          removeFindDomNode={false}
          trigger={
            Array [
              <CompliantIcon
                compliant={false}
                rulesFailed={300}
                rulesPassed={30}
                score={10}
                supported={true}
              />,
              " 10%",
            ]
          }
          zIndex={9999}
        />
      </Tooltip>
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a question mark icon if the host has no rules passed or failed 1`] = `
<ComplianceScore
  rulesFailed={0}
  rulesPassed={0}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-4"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
       N/A
    </p>
  </Text>
</ComplianceScore>
`;

exports[`auxiliary functions to reducer should show a success icon if the host is compliant 1`] = `
<ComplianceScore
  profiles={
    Array [
      Object {
        "compliant": true,
      },
      Object {
        "compliant": true,
      },
    ]
  }
  rulesFailed={3}
  rulesPassed={30}
  score={91}
>
  <Text>
    <p
      className=""
      data-ouia-component-id="OUIA-Generated-Text-3"
      data-ouia-component-type="PF4/Text"
      data-ouia-safe={true}
      data-pf-content={true}
    >
       91%
    </p>
  </Text>
</ComplianceScore>
`;
